--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,9 @@
     <properties>
         <java.version>1.8</java.version>
         <fastjson.version>1.2.46</fastjson.version>
+        <jackson.version>2.7.4</jackson.version>
+        <retrofit2.version>2.0.2</retrofit2.version>
+        <okhttp3.version>3.2.0</okhttp3.version>
     </properties>
 
     <dependencies>
@@ -45,32 +48,32 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-core</artifactId>
-            <version>2.7.4</version>
+            <version>${jackson.version}</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-annotations</artifactId>
-            <version>2.7.4</version>
+            <version>${jackson.version}</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.7.4</version>
+            <version>${jackson.version}</version>
         </dependency>
         <dependency>
             <groupId>com.squareup.retrofit2</groupId>
             <artifactId>retrofit</artifactId>
-            <version>2.0.2</version>
+            <version>${retrofit2.version}</version>
         </dependency>
         <dependency>
             <groupId>com.squareup.retrofit2</groupId>
             <artifactId>converter-jackson</artifactId>
-            <version>2.0.2</version>
+            <version>${retrofit2.version}</version>
         </dependency>
         <dependency>
             <groupId>com.squareup.okhttp3</groupId>
             <artifactId>logging-interceptor</artifactId>
-            <version>3.2.0</version>
+            <version>${okhttp3.version}</version>
         </dependency>
     </dependencies>
 
