--- a/pom.xml
+++ b/pom.xml
@@ -19,7 +19,8 @@
         <fastjson.version>1.2.46</fastjson.version>
         <jackson.version>2.9.9</jackson.version>
         <retrofit2.version>2.6.0</retrofit2.version>
-        <okhttp3.version>3.14.2</okhttp3.version>
+        <!--okhttp3的版本与retrofit2中依赖的retrofit2版本保持一致-->
+        <okhttp3.version>3.12.0</okhttp3.version>
     </properties>
 
     <dependencies>
@@ -54,11 +55,11 @@
             <artifactId>jackson-core</artifactId>
             <version>${jackson.version}</version>
         </dependency>
-        <dependency>
+       <!-- <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-annotations</artifactId>
             <version>${jackson.version}</version>
-        </dependency>
+        </dependency>-->
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
